Fix overflow on accordion summary (#12)

--- a/src/styles/function-reference.css
+++ b/src/styles/function-reference.css
@@ -101,13 +101,14 @@
   border: 1px solid var(--sl-color-hairline);
   border-radius: 0.5rem;
   padding: 0;
+  overflow: hidden;
 }
 
 .function-metadata-details summary {
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
-  padding: 0.75rem;
+  padding: 0.75rem 0.75rem 0.75rem 1rem;
   user-select: none;
   list-style: none;
   display: flex;
@@ -143,13 +144,14 @@
   border: 1px solid var(--sl-color-hairline);
   border-radius: 0.5rem;
   padding: 0;
+  overflow: hidden;
 }
 
 .function-parameters-details summary {
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
-  padding: 0.75rem;
+  padding: 0.75rem 0.75rem 0.75rem 1rem;
   user-select: none;
   list-style: none;
   display: flex;
